--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,13 @@
     <description>Demo project for Spring Boot</description>
     <modules>
         <module>member-service</module>
+        <module>common-service</module>
     </modules>
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2022.0.0</spring-cloud.version>
     </properties>
     <dependencies>
-
-
 
 
     </dependencies>
@@ -37,6 +36,31 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+
+            <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.70</version>
+            </dependency>
+
+
+            <!-- https://mvnrepository.com/artifact/cn.hutool/hutool-all -->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>5.8.10</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>com.example</groupId>
+                <artifactId>jk-tickets</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+
+
 
         </dependencies>
     </dependencyManagement>
