--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>member-service</module>
         <module>common-service</module>
+        <module>gateway-service</module>
     </modules>
     <properties>
         <java.version>17</java.version>
