--- a/member-service/src/main/resources/application.yml
+++ b/member-service/src/main/resources/application.yml
@@ -3,3 +3,18 @@ server:
 #  context-path 项目API前缀 加了要放访问的话 必须要加上这个前缀
   servlet:
     context-path: "/member"
+
+
+
+spring:
+  datasource:
+    username: train_member
+    password: KEY!moling!6
+    url: jdbc:mysql://rm-cn-uax39xxd10011clo.rwlb.rds.aliyuncs.com/train-member?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+
+mybatis:
+  #让mybatis知道xml文件在哪
+  mapper-locations: classpath:/mapper/**/*.xml
+
