--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>member-service</module>
         <module>common-service</module>
         <module>gateway-service</module>
+        <module>generator-service</module>
     </modules>
     <properties>
         <java.version>17</java.version>
