--- a/common-service/pom.xml
+++ b/common-service/pom.xml
@@ -70,6 +70,12 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 
