--- a/common-service/pom.xml
+++ b/common-service/pom.xml
@@ -43,6 +43,7 @@
 
 
         <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+<!--        控制json内的字段-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
@@ -69,10 +70,15 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+
+<!--        校验-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
 
