--- a/member-service/pom.xml
+++ b/member-service/pom.xml
@@ -44,6 +44,10 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+        </dependency>
 
     </dependencies>
 
