--- a/member-service/src/main/resources/application.yml
+++ b/member-service/src/main/resources/application.yml
@@ -18,3 +18,9 @@ mybatis:
   #让mybatis知道xml文件在哪
   mapper-locations: classpath:/mapper/**/*.xml
 
+# PageHelper 分页插件配置
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
+  params: count=countsql
