--- a/generator-service/pom.xml
+++ b/generator-service/pom.xml
@@ -18,6 +18,27 @@
     </properties>
 
     <dependencies>
+<!--        用于自定义生成器-->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+        </dependency>
+
+
+
+        <!-- 读xml -->
+        <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>2.1.3</version>
+        </dependency>
+<!--      读xml  dom4j 配套 -->
+        <!-- https://mvnrepository.com/artifact/jaxen/jaxen -->
+        <dependency>
+            <groupId>jaxen</groupId>
+            <artifactId>jaxen</artifactId>
+            <version>1.2.0</version>
+        </dependency>
 
     </dependencies>
 
@@ -31,8 +52,8 @@
                 <version>1.4.0</version>
                 <configuration>
 <!--                    读取 配置文件 路径，哪个地方需要生成代码 就设置到对应的目录 需要在maven 界面的plugins 中点击使用 -->
-                    <configurationFile>src/main/resources/generator-config-member.xml</configurationFile>
-<!--                    <configurationFile>src/main/resources/generator-config-business.xml</configurationFile>-->
+<!--                    <configurationFile>src/main/resources/generator-config-member.xml</configurationFile>-->
+                    <configurationFile>src/main/resources/generator-config-business.xml</configurationFile>
                     <!--<configurationFile>src/main/resources/generator-config-batch.xml</configurationFile>-->
                     <overwrite>true</overwrite>
                     <verbose>true</verbose>
