--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>common-service</module>
         <module>gateway-service</module>
         <module>generator-service</module>
+        <module>business-service</module>
     </modules>
     <properties>
         <java.version>17</java.version>
