定时调度模块集成quartz

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>gateway-service</module>
         <module>generator-service</module>
         <module>business-service</module>
+        <module>batch-service</module>
     </modules>
     <properties>
         <java.version>17</java.version>
