集成feign 实现服务之间的调用

--- a/batch-service/pom.xml
+++ b/batch-service/pom.xml
@@ -41,6 +41,18 @@
             <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
 
+<!--外键调用-->
+        <!--远程调用openfeign-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <!--openfeign默认使用的是loadBalance的负载均衡器  -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-loadbalancer</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -49,7 +61,7 @@
             <optional>true</optional>
         </dependency>
 
-
+<!--分页依赖-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
