--- a/common-service/pom.xml
+++ b/common-service/pom.xml
@@ -82,6 +82,20 @@
         </dependency>
 
 
+
+        <!--外键调用-->
+        <!--远程调用openfeign-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <!--openfeign默认使用的是loadBalance的负载均衡器  -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-loadbalancer</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 
