--- a/pom.xml
+++ b/pom.xml
@@ -83,12 +83,15 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>8.0.22</version>
             </dependency>
-
+<!--        分页-->
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
                 <version>1.4.6</version>
             </dependency>
+
+<!--            springCloud 用于nacos-->
+
 
 
 
