--- a/member-service/pom.xml
+++ b/member-service/pom.xml
@@ -63,6 +63,12 @@
             <artifactId>spring-cloud-loadbalancer</artifactId>
         </dependency>
 
+<!-- Nacos-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
 
     </dependencies>
 
