--- a/pom.xml
+++ b/pom.xml
@@ -90,8 +90,14 @@
                 <version>1.4.6</version>
             </dependency>
 
-<!--            springCloud 用于nacos-->
-
+<!--            springCloud管理于nacos版本-->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>2022.0.0.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 
 
 
