配置Gateway+nacos实现按应用名路由转发

--- a/common-service/pom.xml
+++ b/common-service/pom.xml
@@ -101,6 +101,20 @@
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
 
+
+        <!-- Nacos 配置中心-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
+        <!-- Nacos 注册中心-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 
