--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -34,6 +34,26 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+
+
+        <!--        SpringBoot 2.4版本/SpringCloud 2020之后，需要引入依赖，才能读取bootStrap文件-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+
+        <!-- Nacos 注册中心-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
+
+        <!--客户端负载均衡 springCloud  -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
