--- a/member-service/src/main/resources/bootstrap.properties
+++ b/member-service/src/main/resources/bootstrap.properties
@@ -7,7 +7,17 @@ spring.application.name=member-service
 #??????nacos?????? DataId:member-dev.properties
 spring.profiles.active=dev
 
-#nacos server??
+#nacos ????server??
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 #???????? ??properties
+#spring.cloud.nacos.config.file-extension=yml
 spring.cloud.nacos.config.file-extension=properties
+#namespace ??????namespace?id
+spring.cloud.nacos.config.namespace=train
+
+
+
+#nacos ????server
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+#???? ????????
+spring.cloud.nacos.discovery.namespace=train
