演示 Mybatis的二级缓存，添加log4j使用时候 打印sql信息

--- a/batch-service/src/main/resources/application.yml
+++ b/batch-service/src/main/resources/application.yml
@@ -26,3 +26,12 @@ pagehelper:
   reasonable: true
   support-methods-arguments: true
   params: count=countsql
+
+
+#log4j使用时候 打印sql信息
+logging:
+  level:
+    com:
+      jktickets:
+        mapper:
+          trace
