--- a/member-service/src/main/resources/application.yml
+++ b/member-service/src/main/resources/application.yml
@@ -34,3 +34,12 @@ pagehelper:
 
 test:
   nacos: member-service
+
+
+#log4j使用时候 打印sql信息
+logging:
+  level:
+    com:
+      jktickets:
+        mapper:
+          trace
