--- a/common-service/pom.xml
+++ b/common-service/pom.xml
@@ -114,6 +114,13 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
+        <!--spring内置缓存  从service层直接缓存-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
+
 
     </dependencies>
 
