--- a/business-service/src/main/resources/bootstrap.properties
+++ b/business-service/src/main/resources/bootstrap.properties
@@ -21,3 +21,19 @@ spring.cloud.nacos.config.namespace=train
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 #???? ????????
 spring.cloud.nacos.discovery.namespace=train
+
+
+
+#seata.tx-service-group=xx
+##????seata?????
+#seata.service.vgroup-mapping.xx=yy
+##seata???????
+#seata.service.grouplist.yy=127.0.0.1:8091
+
+#Seata
+#?????
+seata.tx-service-group=train-group
+#????seata?????
+seata.service.vgroup-mapping.train-group=default
+#seata???????
+seata.service.grouplist.default=127.0.0.1:8091
