--- a/member-service/src/main/resources/bootstrap.properties
+++ b/member-service/src/main/resources/bootstrap.properties
@@ -21,3 +21,12 @@ spring.cloud.nacos.config.namespace=train
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 #???? ????????
 spring.cloud.nacos.discovery.namespace=train
+
+
+#Seata
+#?????
+seata.tx-service-group=train-group
+#????seata?????
+seata.service.vgroup-mapping.train-group=default
+#seata???????
+seata.service.grouplist.default=127.0.0.1:8091
