--- a/business-service/src/main/resources/bootstrap.properties
+++ b/business-service/src/main/resources/bootstrap.properties
@@ -24,6 +24,26 @@ spring.cloud.nacos.discovery.namespace=train
 
 
 
+seata.registry.type=nacos
+seata.registry.nacos.application=seata-server
+seata.registry.nacos.server-addr=127.0.0.1:8848
+seata.registry.nacos.group=SEATA_GROUP
+seata.registry.nacos.namespace=train
+seata.registry.nacos.username=nacos
+seata.registry.nacos.password=nacos
+
+seata.config.type=nacos
+seata.config.nacos.application=seata-server
+seata.config.nacos.server-addr=127.0.0.1:8848
+seata.config.nacos.group=SEATA_GROUP
+seata.config.nacos.dataId=seataServer.properties
+seata.config.nacos.namespace=train
+seata.config.nacos.username=nacos
+seata.config.nacos.password=nacos
+
+
+
+
 #seata.tx-service-group=xx
 ##????seata?????
 #seata.service.vgroup-mapping.xx=yy
@@ -34,6 +54,6 @@ spring.cloud.nacos.discovery.namespace=train
 #?????
 seata.tx-service-group=train-group
 #????seata?????
-seata.service.vgroup-mapping.train-group=default
-#seata???????
-seata.service.grouplist.default=127.0.0.1:8091
+#seata.service.vgroup-mapping.train-group=default
+##seata???????
+#seata.service.grouplist.default=127.0.0.1:8091
