--- a/batch-service/src/main/resources/bootstrap.properties
+++ b/batch-service/src/main/resources/bootstrap.properties
@@ -21,3 +21,29 @@ spring.cloud.nacos.config.namespace=train
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 #???? ????????
 spring.cloud.nacos.discovery.namespace=train
+
+
+#Sentinel
+spring.cloud.sentinel.transport.port=8719
+spring.cloud.sentinel.transport.dashboard=localhost:18080
+
+#SENINEL
+spring.cloud.sentinel.datasource.degrade.nacos.server-addr=localhost:8848
+spring.cloud.sentinel.datasource.degrade.nacos.namespace=train
+spring.cloud.sentinel.datasource.degrade.nacos.group-id=DEFAULT_GROUP
+spring.cloud.sentinel.datasource.degrade.nacos.data-id=sentinel-batch-degrade
+spring.cloud.sentinel.datasource.degrade.nacos.rule-type=degrade
+
+#SENINEL NEED FEIGN
+feign.sentinel.enabled=true
+spring.cloud.openfeign.lazy-attributes-resolution=true
+
+
+
+#Seata
+#?????
+seata.tx-service-group=train-group
+#????seata?????
+seata.service.vgroup-mapping.train-group=default
+##seata???????
+seata.service.grouplist.default=127.0.0.1:8091
