--- a/business-service/pom.xml
+++ b/business-service/pom.xml
@@ -63,6 +63,17 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
 
+<!--        限流熔断 sentinel-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+<!--        sentinel +nacos-->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+        </dependency>
+
 
     </dependencies>
 
