--- a/batch-service/pom.xml
+++ b/batch-service/pom.xml
@@ -67,6 +67,17 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
         </dependency>
 
+
+        <!--        限流熔断 sentinel-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+        <!--        sentinel +nacos-->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+        </dependency>
     </dependencies>
 
 
