--- a/business-service/src/main/resources/bootstrap.properties
+++ b/business-service/src/main/resources/bootstrap.properties
@@ -57,3 +57,32 @@ seata.tx-service-group=train-group
 #seata.service.vgroup-mapping.train-group=default
 ##seata???????
 #seata.service.grouplist.default=127.0.0.1:8091
+
+
+#Sentinel
+spring.cloud.sentinel.transport.port=8719
+spring.cloud.sentinel.transport.dashboard=localhost:18080
+
+
+#LIANLU XUYAO
+spring.cloud.sentinel.web-context-unify=false
+
+#Sentinel Nacos
+#spring.cloud.sentinel.datasource.nacos.nacos.server-addr=localhost:8848
+#spring.cloud.sentinel.datasource.nacos.nacos.namespace=train
+#spring.cloud.sentinel.datasource.nacos.nacos.group-id=TRAIN_GROUP
+#spring.cloud.sentinel.datasource.nacos.nacos.data-id=sentinel
+#spring.cloud.sentinel.datasource.nacos.nacos.rule-type=flow
+
+spring.cloud.sentinel.datasource.flow.nacos.server-addr=localhost:8848
+spring.cloud.sentinel.datasource.flow.nacos.namespace=train
+spring.cloud.sentinel.datasource.flow.nacos.group-id=DEFAULT_GROUP
+spring.cloud.sentinel.datasource.flow.nacos.data-id=sentinel-business-flow
+spring.cloud.sentinel.datasource.flow.nacos.rule-type=flow
+
+
+#spring.cloud.sentinel.datasource.degrade.nacos.server-addr=localhost:8848
+#spring.cloud.sentinel.datasource.degrade.nacos.namespace=train
+#spring.cloud.sentinel.datasource.degrade.nacos.group-id=DEFAULT_GROUP
+#spring.cloud.sentinel.datasource.degrade.nacos.data-id=sentinel-business-degrade
+#spring.cloud.sentinel.datasource.degrade.nacos.rule-type=degrade
