--- a/business-service/pom.xml
+++ b/business-service/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>sentinel-datasource-nacos</artifactId>
         </dependency>
 
+<!--        图形验证码-->
+        <dependency>
+            <groupId>com.github.penggle</groupId>
+            <artifactId>kaptcha</artifactId>
+        </dependency>
 
     </dependencies>
 
