--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,19 @@
                 <version>3.21.0</version>
             </dependency>
 
+<!--            图像验证码 -->
+<!--            升级到JDK17 排除掉 javax.sdrvlet-->
+            <dependency>
+                <groupId>com.github.penggle</groupId>
+                <artifactId>kaptcha</artifactId>
+                <version>2.3.2</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>javax.servlet</groupId>
+                        <artifactId>javax.servlet-api</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
 
 
         </dependencies>
