完成MQ消费里的购票功能

--- a/business-service/src/main/resources/application.yml
+++ b/business-service/src/main/resources/application.yml
@@ -84,3 +84,8 @@ logging:
           trace
 
 
+#  <!--    RocketMQ-->
+rocketmq:
+  name-server: http://localhost:9876
+  producer:
+    group: default
