--- a/business-service/pom.xml
+++ b/business-service/pom.xml
@@ -80,6 +80,13 @@
             <artifactId>kaptcha</artifactId>
         </dependency>
 
+<!--    RocketMQ-->
+        <!-- https://mvnrepository.com/artifact/org.apache.rocketmq/rocketmq-spring-boot-starter -->
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+        </dependency>
+
     </dependencies>
 
 
