--- a/business-service/pom.xml
+++ b/business-service/pom.xml
@@ -64,15 +64,15 @@
         </dependency>
 
 <!--        限流熔断 sentinel-->
-        <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>-->
+<!--        </dependency>-->
 <!--        sentinel +nacos-->
-        <dependency>
-            <groupId>com.alibaba.csp</groupId>
-            <artifactId>sentinel-datasource-nacos</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.csp</groupId>-->
+<!--            <artifactId>sentinel-datasource-nacos</artifactId>-->
+<!--        </dependency>-->
 
 <!--        图形验证码-->
         <dependency>
@@ -91,6 +91,10 @@
 
 
     <build>
+        <!--        设置打包位置-->
+        <finalName>/dist/${project.artifactId}</finalName>
+
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
