--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -56,4 +56,29 @@
         </dependency>
     </dependencies>
 
+
+
+    <build>
+        <!--        设置打包位置-->
+        <finalName>/dist/${artifactId}</finalName>
+
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <!--            用于IDEA 固定JAVA的版本为17-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
