--- a/member-service/src/main/resources/bootstrap.properties
+++ b/member-service/src/main/resources/bootstrap.properties
@@ -5,7 +5,7 @@ spring.application.name=member-service
 
 #?????nacos ????? ??????dataId:member-dev.properties
 #??????nacos?????? DataId:member-dev.properties
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 #nacos ????server??
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
